--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@ build_options.mk export-ignore
 Makefile export-ignore
 stimer.mltbx export-ignore
 stimer.prj export-ignore
+slib_ref_stimer.slx export-ignore
 
 # Auto detect text files and perform LF normalization
 * text=auto
